--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     // See https://github.com/robolectric/robolectric/issues/1932#issuecomment-219796474
     testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
     
-    compile 'com.facebook.android:facebook-android-sdk:4.14.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile "com.android.support:design:${project.ext.support_library_version}"
 
     compile "com.google.firebase:firebase-auth:${project.ext.firebase_version}"
